added query selectors for hiding and showing the relevant divs

--- a/style.css
+++ b/style.css
@@ -12,3 +12,17 @@
   border-radius: 2px;
   border: 1px solid black;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+a {
+  color: black;
+}
+
+.hide {
+  display: none;
+}
