styled the webpage, added background and fonts

--- a/style.css
+++ b/style.css
@@ -1,28 +1,65 @@
+body {
+  font-family: sans-serif;
+  background: url(bg.svg) /* background from svgbackgrounds.com */
+}
+
 .container {
-  /* text-align: center; */
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100vh;
 }
 
+h1 {
+  font-family: 'Sonsie One', cursive;
+}
+
+p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  letter-spacing: 0.1rem;
+}
+
 .card {
-  width: 500px;
-  height: 200px;
+  width: 600px;
+  height: 180px;
+  background-color: white;
   border-radius: 2px;
-  border: 1px solid black;
+  padding: 20px;
+  margin-top: 15vh;
+  box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
 }
 
 form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 100%;
 }
 
 a {
   color: black;
 }
 
+input {
+  width: 100%;
+  height: 30px;
+  margin-bottom: 20px;
+  padding: 0px;
+}
+
 .hide {
   display: none;
+}
+
+button {
+  width: 100px;
+  height: 30px;
+  font-size: 12px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+}
+
+.submit {
+  display: flex;
 }
